# Scanned-PDF-to-Searchable-PDF

./: README.md  main.py  pyproject.toml
